correção de bugs

--- a/pages/phase_01.html
+++ b/pages/phase_01.html
@@ -161,12 +161,6 @@
               <div class="modal-header">
                 Como base no percurso dos dois Tatu é possível concluir que a
                 trajetoria que representa o Movimento Retilíneo Uniforme é:
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
               </div>
 
               <div class="modal-body">
@@ -227,12 +221,6 @@
               <div class="modal-header">
                 Como base no percurso dos dois Tatu é possível concluir que a
                 trajetoria que representa o Movimento Retilíneo Uniforme é:
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
               </div>
 
               <div class="modal-body">
@@ -302,11 +290,14 @@
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
               </div>
+
               <div class="modal-body">
                 <p class="textWin">
                   Parabéns por completar o desafio! Siga para a próxima fase
                 </p>
+              </div>
 
+              <div class="modal-footer">
                 <a
                   href="./phase_02.html"
                   role="button"
@@ -335,11 +326,14 @@
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
               </div>
+
               <div class="modal-body">
                 <p class="textWin">
                   Parabéns por completar o desafio! Siga para a próxima fase
                 </p>
+              </div>
 
+              <div class="modal-footer">
                 <a href="./phase_02.html" role="button" class="btn btn-primary">
                   Próxima fase
                 </a>
@@ -364,11 +358,13 @@
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Tempo esgotado</h5>
               </div>
+
               <div class="modal-body">
                 <p class="textWin">
                   Infelizmente o tempo acabou! Siga para o próximo desafio.
                 </p>
               </div>
+
               <div class="modal-footer">
                 <a
                   href="./phase_02.html"
