--- a/pages/phase_02.html
+++ b/pages/phase_02.html
@@ -129,14 +129,8 @@
           <div class="modal-dialog modal-lg modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                Qual dos gráficos abaixo melhor representa a velocidade/tempo do
-                Tatu?
-                <button
-                  type="button"
-                  class="btn-close btn-sm"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
+                Qual dos gráficos abaixo melhor representa a velocidade X tempo
+                do Tatu?
               </div>
 
               <div class="modal-body">
@@ -211,14 +205,8 @@
           <div class="modal-dialog modal-lg modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                Qual dos gráficos abaixo melhor representa a velocidade/tempo do
-                Tatu?
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
+                Qual dos gráficos abaixo melhor representa a velocidade X tempo
+                do Tatu?
               </div>
 
               <div class="modal-body">
@@ -305,11 +293,14 @@
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
               </div>
+
               <div class="modal-body">
                 <p class="textWin">
                   Parabéns por completar o desafio! Siga para a próxima fase
                 </p>
+              </div>
 
+              <div class="modal-footer">
                 <a
                   href="./phase_03.html"
                   role="button"
@@ -337,11 +328,14 @@
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
               </div>
+
               <div class="modal-body">
                 <p class="textWin">
                   Parabéns por completar o desafio! Siga para a próxima fase
                 </p>
+              </div>
 
+              <div class="modal-footer">
                 <a href="./phase_03.html" role="button" class="btn btn-primary"
                   >Próxima fase</a
                 >
