--- a/pages/phase_03.html
+++ b/pages/phase_03.html
@@ -129,13 +129,7 @@
           <div class="modal-dialog modal-sm modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <p>Com base na trajetória do Tatu, qual é a sua velocidade?</p>
-                <button
-                  type="button"
-                  class="btn btn-close btn-sm"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
+                Com base na trajetória do Tatu, qual é a sua velocidade?
               </div>
 
               <div class="modal-body">
@@ -199,13 +193,7 @@
           <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                <p>Com base na trajetória do Tatu, qual é a sua velocidade?</p>
-                <button
-                  type="button"
-                  class="btn btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
+                Com base na trajetória do Tatu, qual é a sua velocidade?
               </div>
 
               <div class="modal-body">
@@ -282,11 +270,14 @@
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
               </div>
+
               <div class="modal-body">
                 <p class="textWin">
                   Parabéns por completar o desafio! Siga para a próxima fase
                 </p>
+              </div>
 
+              <div class="modal-footer">
                 <a
                   href="./phase_04.html"
                   role="button"
@@ -314,11 +305,14 @@
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
               </div>
+
               <div class="modal-body">
                 <p class="textWin">
                   Parabéns por completar o desafio! Siga para a próxima fase
                 </p>
+              </div>
 
+              <div class="modal-footer">
                 <a href="./phase_04.html" role="button" class="btn btn-primary"
                   >Próxima fase</a
                 >
