--- a/pages/phase_05.html
+++ b/pages/phase_05.html
@@ -163,12 +163,6 @@
               <div class="modal-header">
                 Como base no percurso dos dois Tatu é possível concluir que a
                 trajetoria que representa o Movimento Retilíneo Uniforme é:
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
               </div>
 
               <div class="modal-body">
@@ -229,12 +223,6 @@
               <div class="modal-header">
                 Como base no percurso dos dois Tatu é possível concluir que a
                 trajetoria que representa o Movimento Retilíneo Uniforme é:
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
               </div>
 
               <div class="modal-body">
@@ -304,11 +292,14 @@
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
               </div>
+
               <div class="modal-body">
                 <p class="textWin">
                   Parabéns por completar o desafio! Siga para a próxima fase
                 </p>
+              </div>
 
+              <div class="modal-footer">
                 <a
                   href="./phase_06.html"
                   role="button"
@@ -337,11 +328,14 @@
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
               </div>
+
               <div class="modal-body">
                 <p class="textWin">
                   Parabéns por completar o desafio! Siga para a próxima fase
                 </p>
+              </div>
 
+              <div class="modal-footer">
                 <a href="./phase_06.html" role="button" class="btn btn-primary">
                   Próxima fase
                 </a>
