--- a/pages/phase_06.html
+++ b/pages/phase_06.html
@@ -129,14 +129,8 @@
           <div class="modal-dialog modal-lg modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                Qual dos gráficos abaixo melhor representa a posição/tempo do
+                Qual dos gráficos abaixo melhor representa a posição X tempo do
                 Tatu?
-                <button
-                  type="button"
-                  class="btn-close btn-sm"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
               </div>
 
               <div class="modal-body">
@@ -212,14 +206,8 @@
           <div class="modal-dialog modal-lg modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                Qual dos gráficos abaixo melhor representa a posição/tempo do
+                Qual dos gráficos abaixo melhor representa a posição X tempo do
                 Tatu?
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Fechar"
-                ></button>
               </div>
 
               <div class="modal-body">
@@ -306,11 +294,14 @@
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
               </div>
+
               <div class="modal-body">
                 <p class="textWin">
                   Parabéns por completar o desafio! Siga para a próxima fase
                 </p>
+              </div>
 
+              <div class="modal-footer">
                 <a
                   href="./phase_07.html"
                   role="button"
@@ -338,11 +329,14 @@
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Fim da fase</h5>
               </div>
+
               <div class="modal-body">
                 <p class="textWin">
                   Parabéns por completar o desafio! Siga para a próxima fase
                 </p>
+              </div>
 
+              <div class="modal-footer">
                 <a href="./phase_07.html" role="button" class="btn btn-primary"
                   >Próxima fase</a
                 >
@@ -367,11 +361,13 @@
               <div class="modal-header">
                 <h5 class="modal-title" id="modalLabel">Tempo esgotado</h5>
               </div>
+
               <div class="modal-body">
                 <p class="textWin fs-6">
                   Infelizmente o tempo acabou! Siga para o próximo desafio.
                 </p>
               </div>
+
               <div class="modal-footer">
                 <a
                   href="./phase_07.html"
