correction of responses to be sent

--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -46,20 +46,9 @@
             aria-valuenow="0"
             aria-valuemin="0"
             aria-valuemax="100"
-          >
-            <div class="progress-bar bg-success"></div>
-          </div>
-
-          <div
-            data-progress-lose
-            class="progress"
-            role="progressbar"
-            aria-label="Segment two"
-            aria-valuenow="0"
-            aria-valuemin="0"
-            aria-valuemax="100"
-          >
-            <div class="progress-bar bg-danger"></div>
+          > 
+            <div class="progress-bar bg-primary">
+            </div>
           </div>
         </div>
 
