phase five complete

--- a/pages/phase_05.html
+++ b/pages/phase_05.html
@@ -221,35 +221,17 @@
           <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                Como base no percurso dos dois Tatu é possível concluir que a
-                trajetoria que representa o Movimento Retilíneo Uniforme é:
+                Como base nos percusos apresentados, no que o percurso de baixo difere do de cima? 
               </div>
 
               <div class="modal-body">
-                <div class="form-check">
-                  <input
-                    type="radio"
-                    class="form-check-input"
-                    id="radio-three"
-                    name="option"
-                  />
-                  <label class="form-check-label" for="radio-three">
-                    A trajetória de baixo.
-                  </label>
-                </div>
 
-                <div class="form-check">
-                  <input
-                    type="radio"
-                    class="form-check-input"
-                    id="radio-four"
-                    name="option"
-                    autocomplete="off"
-                  />
-                  <label class="form-check-label" for="radio-four">
-                    A trajetória de cima.
-                  </label>
-                </div>
+                <textarea
+                  id="answerToQuestionFive"
+                  class="form-control mb-1"
+                  name="logica"
+                  rows="4"
+                ></textarea>
               </div>
 
               <div class="modal-footer">
@@ -406,76 +388,6 @@
                   class="btn btn-secondary"
                 >
                   Próxima fase
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Modal para informar que a resposta está errada (mobile)-->
-        <div
-          id="game-over-modal-mobile"
-          class="modal fade"
-          data-bs-backdrop="static"
-          data-bs-keyboard="false"
-          tabindex="-1"
-          role="dialog"
-          aria-labelledby="modalLabel"
-          aria-hidden="true"
-        >
-          <div class="modal-dialog modal-sm" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title">Resposta errada</h5>
-              </div>
-              <div class="modal-body">
-                <p class="textWin">
-                  Não foi dessa vez! Siga para o próximo desafio.
-                </p>
-              </div>
-              <div class="modal-footer">
-                <a
-                  href="./phase_06.html"
-                  role="button"
-                  class="btn btn-danger btn-sm"
-                >
-                  Próximo desafio
-                  <i class="bi bi-pause"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Modal para informar que a resposta está errada (desktop) -->
-        <div
-          id="game-over-modal-desktop"
-          class="modal fade"
-          data-bs-backdrop="static"
-          data-bs-keyboard="false"
-          tabindex="-1"
-          role="dialog"
-          aria-labelledby="modalLabel"
-          aria-hidden="true"
-        >
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="modalLabel">Resposta errada</h5>
-              </div>
-              <div class="modal-body">
-                <p class="textWin">
-                  Não foi dessa vez! Siga para o próxima desafio.
-                </p>
-              </div>
-              <div class="modal-footer">
-                <a
-                  href="./phase_06.html"
-                  role="button"
-                  class="btn btn-danger btn-sm"
-                >
-                  Próximo desafio
-                  <i class="bi bi-pause"></i>
                 </a>
               </div>
             </div>
