--- a/pages/phase_01.html
+++ b/pages/phase_01.html
@@ -219,7 +219,7 @@
           <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                Como base no percurso dos dois Tatu é possível concluir que a
+                Como base no percurso dos dois Tatus, é possível concluir que a
                 trajetoria que representa o Movimento Retilíneo Uniforme é:
               </div>
 
