--- a/pages/phase_05.html
+++ b/pages/phase_05.html
@@ -221,7 +221,7 @@
           <div class="modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
-                Como base nos percusos apresentados, no que o percurso de baixo difere do de cima? 
+                Com base nos percusos apresentados, no que o percurso de baixo difere do de cima? 
               </div>
 
               <div class="modal-body">
