--- a/pages/phase_04.html
+++ b/pages/phase_04.html
@@ -56,7 +56,7 @@
         <div class="balloon-text">
           <div class="fox-balloon d-none">
             <p class="text-center">
-              Se eu manter uma velocidade constante de
+              Se eu mantiver uma velocidade constante de
               <strong><span class="fox-velocity"></span>m/s</strong>
               , eu alcanço Tito em
               <strong><span class="crash-time"></span></strong>.
